--- a/src/pretixpresale/templates/pretixpresale/event/index.html
+++ b/src/pretixpresale/templates/pretixpresale/event/index.html
@@ -29,7 +29,8 @@
                             </div>
                             {% if var.cached_availability.0 == 100 %}
                                 <div class="col-md-2 col-xs-6 availability-box available">
-                                    <input type="number" class="form-control input-item-count" placeholder="0" min="0">
+                                    <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                            max="{{ var.cached_availability.1 }}">
                                 </div>
                             {% else %}
                                 {% include "pretixpresale/event/fragment_availability.html" with avail=var.cached_availability.0 %}
@@ -53,7 +54,8 @@
                         </div>
                         {% if item.cached_availability.0 == 100 %}
                             <div class="col-md-2 col-xs-6 availability-box available">
-                                <input type="number" class="form-control input-item-count" placeholder="0" min="0">
+                                <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                        max="{{ item.cached_availability.1 }}">
                             </div>
                         {% else %}
                             {% include "pretixpresale/event/fragment_availability.html" with avail=item.cached_availability.0 %}
