Fix of error in last commit

--- a/src/pretixcontrol/templates/pretixcontrol/event/settings.html
+++ b/src/pretixcontrol/templates/pretixcontrol/event/settings.html
@@ -28,6 +28,7 @@
 			<legend>{% trans "Presale settings" %}</legend>
 			{% bootstrap_field form.presale_start layout="horizontal" %}
 			{% bootstrap_field form.presale_end layout="horizontal" %}
+            {% bootstrap_field form.max_items_per_order layout="horizontal" %}
 		</fieldset>
 		<fieldset>
 			<legend>{% trans "Payment settings" %}</legend>
