Fix occurence of old settings name

--- a/src/pretixcontrol/templates/pretixcontrol/auth/base.html
+++ b/src/pretixcontrol/templates/pretixcontrol/auth/base.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{ settings.TIXL_INSTANCE_NAME }}</title>
+		<title>{{ settings.PRETIX_INSTANCE_NAME }}</title>
 		{% compress css %}
 		<link rel="stylesheet" type="text/less" href="{% static "pretixcontrol/less/auth.less" %}" />
 		{% endcompress %}
