--- a/src/pretixcontrol/templates/pretixcontrol/base.html
+++ b/src/pretixcontrol/templates/pretixcontrol/base.html
@@ -26,7 +26,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">{{ settings.TIXL_INSTANCE_NAME }}</a>
+					<a class="navbar-brand" href="#">{{ settings.PRETIX_INSTANCE_NAME }}</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
