--- a/src/pretixpresale/templates/pretixpresale/event/index.html
+++ b/src/pretixpresale/templates/pretixpresale/event/index.html
@@ -2,76 +2,81 @@
 {% load i18n %}
 
 {% block content %}
-    {% for tup in items_by_category %}
-        <section>
-            <h3>{{ tup.0.name }}</h3>
-            {% for item in tup.1 %}
-                {% if item.has_variations %}
-                    <div class="row-fluid product-row headline">
-                        <div class="col-md-8 col-xs-12">
-                            <strong>{{ item.name }}</strong>
-                            {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                    {% for var in item.available_variations %}
-                        <div class="row-fluid product-row variation">
+    <form method="post"
+            action="{% url "presale:event.cart.add" organizer=request.event.organizer.slug event=request.event.slug %}?next={{ request.path_info|urlencode }}">
+        {% csrf_token %}
+        {% for tup in items_by_category %}
+            <section>
+                <h3>{{ tup.0.name }}</h3>
+                {% for item in tup.1 %}
+                    {% if item.has_variations %}
+                        <div class="row-fluid product-row headline">
                             <div class="col-md-8 col-xs-12">
-                                {{ var }}
+                                <strong>{{ item.name }}</strong>
+                                {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        {% for var in item.available_variations %}
+                            <div class="row-fluid product-row variation">
+                                <div class="col-md-8 col-xs-12">
+                                    {{ var }}
+                                </div>
+                                <div class="col-md-2 col-xs-6 price">
+                                    {{ event.currency }} {{ var.price|floatformat:2 }}
+                                    {% if item.tax_rate %}
+                                        <br /><small>{% blocktrans trimmed with rate=item.tax_rate %}
+                                            incl. {{ rate }}% taxes
+                                        {% endblocktrans %}</small>
+                                    {% endif %}
+                                </div>
+                                {% if var.cached_availability.0 == 100 %}
+                                    <div class="col-md-2 col-xs-6 availability-box available">
+                                        <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                                max="{{ var.cached_availability.1 }}"
+                                                name="variation_{{ var.variation.identity }}">
+                                    </div>
+                                {% else %}
+                                    {% include "pretixpresale/event/fragment_availability.html" with avail=var.cached_availability.0 %}
+                                {% endif %}
+                                <div class="clearfix"></div>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                        <div class="row-fluid product-row simple">
+                            <div class="col-md-8 col-xs-12">
+                                <strong>{{ item.name }}</strong>
+                                {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
                             </div>
                             <div class="col-md-2 col-xs-6 price">
-                                {{ event.currency }} {{ var.price|floatformat:2 }}
+                                {{ event.currency }} {{ item.price|floatformat:2 }}
                                 {% if item.tax_rate %}
                                     <br /><small>{% blocktrans trimmed with rate=item.tax_rate %}
-                                        incl. {{ rate }}% taxes
-                                    {% endblocktrans %}</small>
+                                    incl. {{ rate }}% taxes
+                                {% endblocktrans %}</small>
                                 {% endif %}
                             </div>
-                            {% if var.cached_availability.0 == 100 %}
+                            {% if item.cached_availability.0 == 100 %}
                                 <div class="col-md-2 col-xs-6 availability-box available">
                                     <input type="number" class="form-control input-item-count" placeholder="0" min="0"
-                                            max="{{ var.cached_availability.1 }}">
+                                            max="{{ item.cached_availability.1 }}" name="item_{{ item.identity }}">
                                 </div>
                             {% else %}
-                                {% include "pretixpresale/event/fragment_availability.html" with avail=var.cached_availability.0 %}
+                                {% include "pretixpresale/event/fragment_availability.html" with avail=item.cached_availability.0 %}
                             {% endif %}
                             <div class="clearfix"></div>
                         </div>
-                    {% endfor %}
-                {% else %}
-                    <div class="row-fluid product-row simple">
-                        <div class="col-md-8 col-xs-12">
-                            <strong>{{ item.name }}</strong>
-                            {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
-                        </div>
-                        <div class="col-md-2 col-xs-6 price">
-                            {{ event.currency }} {{ item.price|floatformat:2 }}
-                            {% if item.tax_rate %}
-                                <br /><small>{% blocktrans trimmed with rate=item.tax_rate %}
-                                incl. {{ rate }}% taxes
-                            {% endblocktrans %}</small>
-                            {% endif %}
-                        </div>
-                        {% if item.cached_availability.0 == 100 %}
-                            <div class="col-md-2 col-xs-6 availability-box available">
-                                <input type="number" class="form-control input-item-count" placeholder="0" min="0"
-                                        max="{{ item.cached_availability.1 }}">
-                            </div>
-                        {% else %}
-                            {% include "pretixpresale/event/fragment_availability.html" with avail=item.cached_availability.0 %}
-                        {% endif %}
-                        <div class="clearfix"></div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </section>
-    {% endfor %}
-    <div class="row-fluid checkout-button-row">
-        <div class="col-md-4 col-md-offset-8">
-            <button class="btn btn-block btn-primary btn-lg">
-                <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
-            </button>
+                    {% endif %}
+                {% endfor %}
+            </section>
+        {% endfor %}
+        <div class="row-fluid checkout-button-row">
+            <div class="col-md-4 col-md-offset-8">
+                <button class="btn btn-block btn-primary btn-lg">
+                    <i class="fa fa-shopping-cart"></i> {% trans "Add to cart" %}
+                </button>
+            </div>
+            <div class="clearfix"></div>
         </div>
-        <div class="clearfix"></div>
-    </div>
+    </form>
 {% endblock %}
