Minor changes to the shopping cart

--- a/src/pretixpresale/templates/pretixpresale/event/index.html
+++ b/src/pretixpresale/templates/pretixpresale/event/index.html
@@ -2,7 +2,16 @@
 {% load i18n %}
 
 {% block content %}
-    {% include "pretixpresale/event/fragment_cart.html" with cart=cart event=request.event %}
+    {% if cart.positions %}
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">{% trans "Your cart" %}</h3>
+        </div>
+        <div class="panel-body">
+            {% include "pretixpresale/event/fragment_cart.html" with cart=cart event=request.event editable=True %}
+        </div>
+    </div>
+    {% endif %}
     <form method="post"
             action="{% url "presale:event.cart.add" organizer=request.event.organizer.slug event=request.event.slug %}?next={{ request.path_info|urlencode }}">
         {% csrf_token %}
