--- a/src/pretixpresale/static/pretixpresale/less/event.less
+++ b/src/pretixpresale/static/pretixpresale/less/event.less
@@ -32,12 +32,16 @@
         display: inline;
     }
     .price, .count {
-        text-align: center;
+        text-align: right;
     }
     .price small,
     .availability-box small {
         display: block;
         line-height: 1;
+    }
+
+    &.total {
+        border-top: 1px solid @table-border-color;
     }
 }
 .checkout-button-row {
