--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -9,6 +9,24 @@
         </div>
         <div class="panel-body">
             {% include "pretixpresale/event/fragment_cart.html" with cart=cart event=request.event editable=True %}
+            <div class="row-fluid">
+                <div class="col-md-6 col-xs-12">
+                    {% if cart.minutes_left > 0 %}
+                        <em>{% blocktrans trimmed with minutes=cart.minutes_left %}
+                            The items in your cart are reserved for you for {{ minutes }} minutes.
+                        {% endblocktrans %}</em>
+                    {% else %}
+                        <em>{% trans "The items in your cart are no longer reserved for you." %}</em>
+                    {% endif %}
+                </div>
+                <div class="col-md-4 col-md-offset-2 col-xs-12">
+                    <a class="btn btn-block btn-primary btn-lg"
+                            href="{% url "presale:event.checkout.start" organizer=request.event.organizer.slug event=request.event.slug %}">
+                        <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
+                    </a>
+                </div>
+                <div class="clearfix"></div>
+            </div>
         </div>
     </div>
     {% endif %}
