Basic tests for cart features

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     {% if cart.positions %}
-    <div class="panel panel-primary">
+    <div class="panel panel-primary cart">
         <div class="panel-heading">
             <h3 class="panel-title">{% trans "Your cart" %}</h3>
         </div>
