--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -14,6 +14,7 @@
 			{% bootstrap_field form.name layout="horizontal" %}
 			{% bootstrap_field form.active layout="horizontal" %}
 			{% bootstrap_field form.category layout="horizontal" %}
+            {% bootstrap_field form.admission layout="horizontal" %}
 			{% bootstrap_field form.short_description layout="horizontal" %}
 			{% bootstrap_field form.long_description layout="horizontal" %}
 		</fieldset>
