--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -100,7 +100,7 @@
         {% endfor %}
         <div class="row-fluid checkout-button-row">
             <div class="col-md-4 col-md-offset-8">
-                <button class="btn btn-block btn-primary btn-lg">
+                <button class="btn btn-block btn-primary btn-lg" type="submit">
                     <i class="fa fa-shopping-cart"></i> {% trans "Add to cart" %}
                 </button>
             </div>
