Fix plugin version number display

--- a/src/pretix/control/templates/pretixcontrol/event/plugins.html
+++ b/src/pretix/control/templates/pretixcontrol/event/plugins.html
@@ -29,7 +29,9 @@
 						</div>
 					</div>
 					<div class="panel-body">
-						<p class="meta">{% blocktrans %}Version {{ plugin.version }} by <em>{{ plugin.author }}</em>{% endblocktrans %}</p>
+						<p class="meta">{% blocktrans trimmed with v=plugin.version a=plugin.author %}
+                            Version {{ v }} by <em>{{ a }}</em>
+                        {% endblocktrans %}</p>
 						<p>{{ plugin.description }}</p>
 					</div>
 				</div>
