--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="{% static "jquery/js/jquery-2.1.1.min.js" %}"></script>
         <script type="text/javascript" src="{% static "js/jquery.formset.js" %}"></script>
         <script type="text/javascript" src="{% static "bootstrap/dist/js/bootstrap.js" %}"></script>
+        <script type="text/javascript" src="{% static "pretixpresale/js/ui/main.js" %}"></script>
     {% endcompress %}
 </head>
 <body>
