--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -29,7 +29,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="row-fluid checkout-button-row">
+        <div class="row checkout-button-row">
             <div class="col-md-4 col-md-offset-8">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
                     {% trans "Continue" %}
