--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
@@ -23,6 +23,7 @@
                     </div>
                     <div id="payment_{{ p.provider.identifier }}" class="panel-collapse collapse">
                         <div class="panel-body form-horizontal">
+                            {{ p.form }}
                         </div>
                     </div>
                 </div>
