--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
@@ -21,7 +21,8 @@
                             </label>
                         </h4>
                     </div>
-                    <div id="payment_{{ p.provider.identifier }}" class="panel-collapse collapse">
+                    <div id="payment_{{ p.provider.identifier }}"
+                         class="panel-collapse collapse {% if request.POST.payment == p.provider.identifier %}in{% endif %}">
                         <div class="panel-body form-horizontal">
                             {{ p.form }}
                         </div>
