Basic confirmation page

--- a/src/pretix/presale/static/pretixpresale/less/event.less
+++ b/src/pretix/presale/static/pretixpresale/less/event.less
@@ -44,6 +44,9 @@
         border-top: 1px solid @table-border-color;
     }
 }
+.panel-primary .panel-heading a {
+    color: white;
+}
 .checkout-button-row {
     padding: 15px 0;
 }
