--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -33,7 +33,21 @@
             </div>
         </div>
         {# TODO: Question answers #}
-        {# TODO: Payment method #}
+        <div class="row-fluid">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="pull-right">
+                        <a href="{% url "presale:event.checkout.payment" organizer=request.event.organizer.slug  event=request.event.slug %}">{% trans "Modify" %}</a>
+                    </div>
+                    <h3 class="panel-title">
+                        {% trans "Payment" %}
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    {{ payment }}
+                </div>
+            </div>
+        </div>
         <div class="row checkout-button-row">
             <div class="col-md-4 col-md-offset-8">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
