--- a/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_payment.html
@@ -16,6 +16,7 @@
                                 <strong class="pull-right">+ {{ p.fee|floatformat:2 }} {{ event.currency }}</strong>
                                 <input type="radio" name="payment" value="{{ p.provider.identifier }}"
                                         data-parent="#payment_accordion"
+                                        required="True"
                                         data-toggle="radiocollapse" data-target="#payment_{{ p.provider.identifier }}" />
                                 <strong>{{ p.provider.verbose_name }}</strong>
                             </label>
@@ -29,7 +30,13 @@
             {% endfor %}
         </div>
         <div class="row checkout-button-row">
-            <div class="col-md-4 col-md-offset-8">
+            <div class="col-md-4">
+                <a class="btn btn-block btn-default btn-lg"
+                        href="{{ view.get_previous_url }}">
+                    {% trans "Go back" %}
+                </a>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
                     {% trans "Continue" %}
                 </button>
