--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -21,7 +21,8 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="cp{{ form.cartpos.identity }}" class="panel-collapse collapse">
+                    <div id="cp{{ form.cartpos.identity }}"
+                            class="panel-collapse collapse {% if forloop.counter0 == 0 %}in{% endif %}">
                         <div class="panel-body">
                             {% bootstrap_form form layout="horizontal" %}
                         </div>
@@ -30,7 +31,13 @@
             {% endfor %}
         </div>
         <div class="row checkout-button-row">
-            <div class="col-md-4 col-md-offset-8">
+            <div class="col-md-4">
+                <a class="btn btn-block btn-default btn-lg"
+                        href="{{ view.get_previous_url }}">
+                    {% trans "Go back" %}
+                </a>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
                     {% trans "Continue" %}
                 </button>
