--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -1,44 +1,57 @@
 {% load i18n %}
 {% for line in cart.positions %}
     <div class="row-fluid cart-row">
-        <div class="col-md-4 col-xs-6">
+        <div class="{% if line.has_questions %}col-md-9 col-xs-12{% else %}col-md-4 col-xs-6{% endif %}">
             <strong>{{ line.item }}</strong>
             {% if line.variation %}
                 – {{ line.variation }}
             {% endif %}
-        </div>
-        <div class="col-md-3 col-xs-6 price">
-            {{ event.currency }} {{ line.price|floatformat:2 }}
-        </div>
-        <div class="col-md-2 col-xs-6 count">
-            {% if editable %}
-            <form action="{% url "presale:event.cart.remove" event=event.slug organizer=event.organizer.slug %}"
+        {% if line.has_questions %}
+            <dl>
+                {% if line.item.admission and event.settings.attendee_names_asked == 'True' %}
+                    <dt>{% trans "Attendee name" %}</dt>
+                    <dd>{% if line.attendee_name %}{{ line.attendee_name }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
+                {% endif %}
+                {% for q in line.questions %}
+                    <dt>{{ q.question }}</dt>
+                    <dd>{% if q.answer %}{{ q.answer }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
+                {% endfor %}
+            </dl>
+        {% else %}
+            </div>
+            <div class="col-md-3 col-xs-6 price">
+                {{ event.currency }} {{ line.price|floatformat:2 }}
+            </div>
+            <div class="col-md-2 col-xs-6 count">
+                {% if editable %}
+                <form action="{% url "presale:event.cart.remove" event=event.slug organizer=event.organizer.slug %}"
+                        method="post">
+                    {% csrf_token %}
+                    {% if line.variation %}
+                        <input type="hidden" name="variation_{{ line.item.identity }}_{{ line.variation.identity }}"
+                                value="1" />
+                    {% else %}
+                        <input type="hidden" name="item_{{ line.item.identity }}"
+                                value="1" />
+                    {% endif %}
+                    <button class="btn btn-mini btn-link"><i class="fa fa-minus"></i></button>
+                </form>
+                {% endif %}
+                {{ line.count }}
+                {% if editable %}
+                <form action="{% url "presale:event.cart.add" event=event.slug organizer=event.organizer.slug %}"
                     method="post">
-                {% csrf_token %}
-                {% if line.variation %}
-                    <input type="hidden" name="variation_{{ line.item.identity }}_{{ line.variation.identity }}"
+                    {% csrf_token %}
+                    {% if line.variation %}
+                        <input type="hidden" name="variation_{{ line.item.identity }}_{{ line.variation.identity }}"
                             value="1" />
-                {% else %}
-                    <input type="hidden" name="item_{{ line.item.identity }}"
-                            value="1" />
+                    {% else %}
+                        <input type="hidden" name="item_{{ line.item.identity }}"
+                                value="1" />
+                    {% endif %}
+                    <button class="btn btn-mini btn-link"><i class="fa fa-plus"></i></button>
+                </form>
                 {% endif %}
-                <button class="btn btn-mini btn-link"><i class="fa fa-minus"></i></button>
-            </form>
-            {% endif %}
-            {{ line.count }}
-            {% if editable %}
-            <form action="{% url "presale:event.cart.add" event=event.slug organizer=event.organizer.slug %}"
-                method="post">
-                {% csrf_token %}
-                {% if line.variation %}
-                    <input type="hidden" name="variation_{{ line.item.identity }}_{{ line.variation.identity }}"
-                        value="1" />
-                {% else %}
-                    <input type="hidden" name="item_{{ line.item.identity }}"
-                            value="1" />
-                {% endif %}
-                <button class="btn btn-mini btn-link"><i class="fa fa-plus"></i></button>
-            </form>
             {% endif %}
         </div>
         <div class="col-md-3 col-xs-6 price">
