--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -8,15 +8,15 @@
             Your order: {{ code }}
         {% endblocktrans %}
         {% if order.status == "n" %}
-            <span class="label label-warning">{% trans "Payment pending" %}</span>
+            <span class="label label-warning pull-right">{% trans "Payment pending" %}</span>
         {% elif order.status == "p" %}
-            <span class="label label-success">{% trans "Paid" %}</span>
+            <span class="label label-success pull-right">{% trans "Paid" %}</span>
         {% elif order.status == "e" %}
-            <span class="label label-danger">{% trans "Payment pending" %}</span>
+            <span class="label label-danger pull-right">{% trans "Payment pending" %}</span>
         {% elif order.status == "c" %}
-            <span class="label label-danger">{% trans "Cancelled" %}</span>
+            <span class="label label-danger pull-right">{% trans "Cancelled" %}</span>
         {% elif order.status == "r" %}
-            <span class="label label-danger">{% trans "Refunded" %}</span>
+            <span class="label label-danger pull-right">{% trans "Refunded" %}</span>
         {% endif %}
     </h2>
     {% if order.status == "n"  %}
