'powered by pretix' link

--- a/src/pretix/control/static/pretixcontrol/less/main.less
+++ b/src/pretix/control/static/pretixcontrol/less/main.less
@@ -2,3 +2,9 @@
 @import "../../../../base/static/fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
 @import "forms.less";
+
+footer {
+    text-align: center;
+    padding: 10px 0;
+    font-size: 11px;
+}
