--- a/src/pretix/control/templates/pretixcontrol/auth/base.html
+++ b/src/pretix/control/templates/pretixcontrol/auth/base.html
@@ -14,7 +14,7 @@
 			{% block content %}
 			{% endblock %}
 			<footer>
-				{% with "href='http://pretix.de'" as a_attr %}
+				{% with "href='http://pretix.eu'" as a_attr %}
 					{% blocktrans trimmed %}
 						powered by <a {{ a_attr }}>pretix</a>
 					{% endblocktrans %}
