--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -46,5 +46,12 @@
 		{% block content %}
 		{% endblock %}
 		</div>
+        <footer>
+            {% with "href='http://pretix.eu'" as a_attr %}
+                {% blocktrans trimmed %}
+                    powered by <a {{ a_attr }}>pretix</a>
+                {% endblocktrans %}
+            {% endwith %}
+        </footer>
 	</body>
 </html>
