--- a/src/pretix/presale/templates/pretixpresale/event/order_modify.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_modify.html
@@ -1,10 +1,13 @@
 {% extends "pretixpresale/event/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
-{% block title %}{% trans "Checkout" %}{% endblock %}
+{% block title %}{% trans "Modify order" %}{% endblock %}
 {% block content %}
-    <h2>{% trans "Checkout" %}</h2>
-    <p>{% trans "Before we continue, we need you to answer some questions." %}</p>
+    <h2>
+        {% blocktrans trimmed with code=order.code %}
+            Modify order: {{ code }}
+        {% endblocktrans %}
+    </h2>
     <form class="form-horizontal" method="post">
         {% csrf_token %}
         <div class="panel-group" id="questions_accordion">
@@ -34,12 +37,12 @@
             <div class="col-md-4">
                 <a class="btn btn-block btn-default btn-lg"
                         href="{{ view.get_index_url }}">
-                    {% trans "Go back" %}
+                    {% trans "Revert changes" %}
                 </a>
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
-                    {% trans "Continue" %}
+                    {% trans "Save changes" %}
                 </button>
             </div>
             <div class="clearfix"></div>
