Overview over user's orders

--- a/src/pretix/presale/static/pretixpresale/less/main.less
+++ b/src/pretix/presale/static/pretixpresale/less/main.less
@@ -10,3 +10,11 @@ footer {
     padding: 10px 0;
     font-size: 11px;
 }
+.page-header {
+    position: relative;
+}
+.page-header .loginbox {
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+}
