--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -10,7 +10,10 @@
         <div class="panel panel-primary cart">
             <div class="panel-heading">
                 <div class="pull-right">
-                    <a href="{% url "presale:event.index" organizer=request.event.organizer.slug  event=request.event.slug %}">{% trans "Modify" %}</a>
+                    <a href="{% url "presale:event.index" organizer=request.event.organizer.slug  event=request.event.slug %}">
+                        <span class="fa fa-edit"></span>
+                        {% trans "Modify" %}
+                    </a>
                 </div>
                 <h3 class="panel-title">
                     {% trans "Your cart" %}
@@ -37,7 +40,10 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="pull-right">
-                        <a href="{% url "presale:event.checkout.payment" organizer=request.event.organizer.slug  event=request.event.slug %}">{% trans "Modify" %}</a>
+                        <a href="{% url "presale:event.checkout.payment" organizer=request.event.organizer.slug  event=request.event.slug %}">
+                            <span class="fa fa-edit"></span>
+                            {% trans "Modify" %}
+                        </a>
                     </div>
                     <h3 class="panel-title">
                         {% trans "Payment" %}
