--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -7,17 +7,7 @@
         {% blocktrans trimmed with code=order.code %}
             Your order: {{ code }}
         {% endblocktrans %}
-        {% if order.status == "n" %}
-            <span class="label label-warning pull-right">{% trans "Payment pending" %}</span>
-        {% elif order.status == "p" %}
-            <span class="label label-success pull-right">{% trans "Paid" %}</span>
-        {% elif order.status == "e" %}
-            <span class="label label-danger pull-right">{% trans "Payment pending" %}</span>
-        {% elif order.status == "c" %}
-            <span class="label label-danger pull-right">{% trans "Cancelled" %}</span>
-        {% elif order.status == "r" %}
-            <span class="label label-danger pull-right">{% trans "Refunded" %}</span>
-        {% endif %}
+        {% include "pretixpresale/event/fragment_order_status.html" with order=order class="pull-right" %}
     </h2>
     {% if order.status == "n"  %}
         <div class="panel panel-danger">
@@ -39,6 +29,7 @@
             {% if order.can_modify_answers %}
                 <div class="pull-right">
                     <a href="{% url "presale:event.order.modify" organizer=request.event.organizer.slug event=request.event.slug order=order.code %}">
+                        <span class="fa fa-edit"></span>
                         {% trans "Change answers" %}
                     </a>
                 </div>
@@ -56,7 +47,10 @@
             <div class="col-md-12 text-right">
                 <p>
                     <a href="{% url 'presale:event.order.cancel' event=request.event.slug organizer=request.event.organizer.slug order=order.code %}"
-                       class="btn btn-danger">{% trans "Cancel order" %}</a>
+                       class="btn btn-danger">
+                        <span class="fa fa-remove"></span>
+                        {% trans "Cancel order" %}
+                    </a>
                 </p>
             </div>
         </div>
