pretix.control: sidebar-based navigation

--- a/src/pretix/control/static/pretixcontrol/less/main.less
+++ b/src/pretix/control/static/pretixcontrol/less/main.less
@@ -1,10 +1,21 @@
 @import "../../../../base/static/bootstrap/less/bootstrap.less";
 @import "../../../../base/static/fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
+@import (inline) "metisMenu.min.css";
+@import "variables.less";
+@import "sb-admin-2.less";
 @import "forms.less";
 
 footer {
     text-align: center;
     padding: 10px 0;
     font-size: 11px;
+}
+
+nav.navbar {
+    margin: 0;
+}
+
+.nav-pills {
+    margin-bottom: 10px;
 }
