--- a/src/pretix/control/templates/pretixcontrol/item/variations_0d.html
+++ b/src/pretix/control/templates/pretixcontrol/item/variations_0d.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inside %}
-	<em>{% trans "You have to define and select propreties to be able to configure variations." %}
+	<p><em>{% trans "You have to define and select propreties to be able to configure variations." %}</em></p>
 {% endblock %}
