--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -2,20 +2,90 @@
 {% load i18n %}
 
 {% block nav %}
-<li class="dropdown">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-calendar"></i> {{ request.event.slug }} <span class="caret"></span></a>
-	<ul class="dropdown-menu" role="menu">
-		<li><a href="{% url "control:events" %}">{% trans "Event overview" %}</a></li>
-		{% regroup request.user.events_cache by organizer as event_list %}
-		{% for g in event_list %}
-			<li class="dropdown-header">{{ g.grouper }}</li>
-			{% for e in g.list %}
-			<li><a href="{% url "control:event.index" organizer=g.grouper.slug event=e.slug %}">{{ e.name }}</a></li>
-			{% endfor %}
-		{% endfor %}
-	</ul>
+<li>
+    <a href="{% url 'control:event.index' organizer=request.event.organizer.slug event=request.event.slug %}"
+             {% if url_name == "event.index" %}class="active"{% endif %}>
+        <i class="fa fa-dashboard fa-fw"></i>
+        {% trans "Dashboard" %}
+    </a>
 </li>
-<li {% if url_name == "event.index" %}class="active"{% endif %}><a href="{% url 'control:event.index' organizer=request.event.organizer.slug event=request.event.slug %}">{% trans "Dashboard" %}</a></li>
-<li {% if "event.settings" in url_name %}class="active"{% endif %}><a href="{% url 'control:event.settings' organizer=request.event.organizer.slug event=request.event.slug %}">{% trans "Settings" %}</a></li>
-<li {% if "event.item" in url_name %}class="active"{% endif %}><a href="{% url 'control:event.items' organizer=request.event.organizer.slug event=request.event.slug %}">{% trans "Items" %}</a></li>
+<li>
+    <a href="#">
+        <i class="fa fa-wrench fa-fw"></i>
+        {% trans "Settings" %}
+        <span class="fa arrow"></span>
+    </a>
+    <ul class="nav nav-second-level">
+        <li>
+            <a href="{% url 'control:event.settings' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.settings" == url_name %}class="active"{% endif %}>
+                {% trans "General" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'control:event.settings.payment' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.settings.payment" == url_name %}class="active"{% endif %}>
+                {% trans "Payment" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'control:event.settings.plugins' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.settings.plugins" == url_name %}class="active"{% endif %} >
+                {% trans "Plugins" %}
+            </a>
+        </li>
+    </ul>
+</li>
+<li>
+    <a href="#">
+        <i class="fa fa-ticket fa-fw"></i>
+        {% trans "Products" %}
+        <span class="fa arrow"></span>
+    </a>
+    <ul class="nav nav-second-level">
+        <li>
+            <a href="{% url 'control:event.items' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.items" == url_name or "event.item." in url_name or url_name == "event.item" %}class="active"{% endif %}>
+                {% trans "Items" %}</a>
+        </li>
+        <li>
+            <a href="{% url 'control:event.items.quotas' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.items.quotas" in url_name %}class="active"{% endif %}>
+                {% trans "Quotas" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'control:event.items.categories' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.items.categories" in url_name %}class="active"{% endif %}>
+                {% trans "Categories" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'control:event.items.properties' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.items.properties" in url_name %}class="active"{% endif %}>
+                {% trans "Properties" %}
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'control:event.items.questions' organizer=request.event.organizer.slug event=request.event.slug %}"
+                    {% if "event.items.questions" in url_name %}class="active"{% endif %}>
+                {% trans "Questions" %}
+            </a>
+        </li>
+    </ul>
+</li>
+<li>
+    <a href="#">
+        <i class="fa fa-shopping-cart fa-fw"></i>
+        {% trans "Orders" %}
+        <span class="fa arrow"></span>
+    </a>
+    <ul class="nav nav-second-level">
+        <li>
+            <a href="{% url 'control:event.items' organizer=request.event.organizer.slug event=request.event.slug %}">
+                {% trans "View orders" %}
+            </a>
+        </li>
+    </ul>
+</li>
 {% endblock %}
